<?xml version="1.0"?>
<package>
  <name>teleop_twist_web</name>
  <version>0.0.0</version>
  <description>Generic web-based teleop for twist robots.</description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>

  <author email="tim.clephas@nobleo.nl">Tim Clephas</author>
  <author email="rayman747@hotmail.com">Ramon Wijnands</author>
  <author email="reinzor@gmail.com">Rein Appeldoorn</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosbridge_server</run_depend>

</package>
