<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_twist_web</name>
  <version>0.6.0</version>
  <description>Generic web-based teleop for twist robots.</description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>

  <author email="tim.clephas@nobleo.nl">Tim Clephas</author>
  <author email="rayman747@hotmail.com">Ramon Wijnands</author>
  <author email="reinzor@gmail.com">Rein Appeldoorn</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rosbridge_server</exec_depend>

</package>
